# kickstart.nvim

./: .gitignore  .ignore  .luarc.json  init.lua  lazy-lock.json  list.txt  nvim-pack-lock.json
lua/: .clang-format  CMakeLists.txt  Makefile  apt_packages_check.lua  ascii-intro.lua  codereview.lua  fzs_lib.lua  lsp.lua  sql.lua  toggle_keys.lua  utils.lua
lua/plugins/: CMakePresets.json  Makefile  ascii-intro.lua  fzs_lib.lua
lua/plugins/src/: simple_fuzzy_sorter.cpp  simple_fuzzy_sorter.h
lua/plugins/telescope/_extensions/: fuzzy_sorter.lua
lua/src/: simple_fuzzy_sorter.cpp  simple_fuzzy_sorter.h
lua/telescope/_extensions/: fuzzy_sorter.lua
lua/test/: fuzzy_sorter_test.cpp
